GNOME Bugzilla – Bug 726216
Fix the build of ATK
Last modified: 2014-03-13 11:12:39 UTC
Hi, In the latest GIT checkout of ATK, there were some issues that prevented ATK from being built, which I will address in the following patches for this bug.
Created attachment 271677 [details] [review] Make sure all needed files are being disttributed First up is a patch that would fix the distribution of source files in the tarball, namely: -atk/atkprivate.h, which was left out from distribution -tests/teststateset.c, which was left out due to repeated occurences of teststateset_SOURCES.
Created attachment 271679 [details] [review] Move DllMain() and related items to atk/atkprivate.c as well The second patch moves the DllMain() and related items from atk/atkobject.c to atk/atkprivate.c, as DllMain() is used to get the HMODULE for the ATK DLL for get_atk_locale_dir (), which was moved to atk/atkprivate.c recently. This fixes the build on Windows, and also cleans the code a by a little bit.
Created attachment 271680 [details] [review] Make up for the missed symbols for AtkValue There were some public APIs that were recently added for AtkValue, which need to be exported, that were missed from atk/atk.symbols. This was caught by during the build of the test programs. These are the patches I have for this bug at the moment. With blessings, thank you!
Review of attachment 271677 [details] [review]: Looks good.
Review of attachment 271679 [details] [review]: Ups, sorry, I didn't realize that those were used for get_atk_locale_dir. Looks good.
Review of attachment 271680 [details] [review]: Looks good.
Hello Piñeiro, The patches were pushed as follows: Attachment 271677 [details]: b2f76883 Attachment 271679 [details]: 57fdd584 Attachment 271680 [details]: a52cf89c Thanks for the reviews, with blessings.