Move DllMain() to atkprivate.c

Since the HMODULE that is initialized by DllMain() is to be used to for
get_atk_locale_dir(), which was recently moved to atk/atkprivate.c, move
DllMain() and its related items to atk/atkprivate.c as well.  This will fix
the ATK build on Windows.

https://bugzilla.gnome.org/show_bug.cgi?id=726216